--- a/css/main.css
+++ b/css/main.css
@@ -52,13 +52,16 @@ nav ul {
 nav li {
   list-style: none;
   padding: 1rem;
-  border: solid 1px transparent;
+  border: solid 0.5px transparent;
   /* border-radius: 100%; */
   text-align: center;
-  transition: 0.5s;
+  transition: 0.6s ease-out;
 }
 nav li:hover {
-  scale: -1 1.2;
+  scale: 1.2 -1;
+  border-top: black 1px solid;
+  border-bottom: black 1px solid;
+  background-color: #ebebeb;
 }
 nav li a {
   text-decoration: none;
@@ -84,7 +87,7 @@ nav li a {
   right: 0;
   background: linear-gradient(to right, #8d8d8da1 0%, #2d2d2d);
   overflow-x: hidden;
-  transition: 0.8s;
+  transition: 1.2s;
   /* padding-top: 60px; */
 }
 #nav-colapse a {
@@ -280,7 +283,7 @@ article:hover img {
 /* ---------------------------contact-form------------------------------ */
 .contact {
   position: relative;
-  height: 150vh;
+  height: 120vh;
   width: 100%;
   /* display: flex;
   flex-direction: column;
@@ -323,7 +326,7 @@ article:hover img {
   flex-direction: column;
 }
 .form-field {
-  padding: 2%;
+  padding: 0.5rem;
 }
 form .form-input {
   width: 80vh;
@@ -402,6 +405,9 @@ footer .copyright {
     padding: 5%;
     flex-direction: column;
   }
+  .contact {
+    height: 80vh;
+  }
   footer {
     height: 40vh;
   }
@@ -433,7 +439,7 @@ footer .copyright {
     margin: 5% 0%;
   }
   .contact {
-    height: 100vh;
+    height: 60vh;
   }
   form .form-input {
     width: 100%;
