--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@ article:hover img {
 /* ---------------------------contact-form------------------------------ */
 .contact {
   position: relative;
-  height: 120vh;
+  height: 150vh;
   width: 100%;
   /* display: flex;
   flex-direction: column;
@@ -326,7 +326,7 @@ article:hover img {
   flex-direction: column;
 }
 .form-field {
-  padding: 0.5rem;
+  padding: 2%;
 }
 form .form-input {
   width: 80vh;
@@ -405,9 +405,6 @@ footer .copyright {
     padding: 5%;
     flex-direction: column;
   }
-  .contact {
-    height: 80vh;
-  }
   footer {
     height: 40vh;
   }
@@ -439,7 +436,7 @@ footer .copyright {
     margin: 5% 0%;
   }
   .contact {
-    height: 60vh;
+    height: 100vh;
   }
   form .form-input {
     width: 100%;
