--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@ article:hover img {
 /* ---------------------------contact-form------------------------------ */
 .contact {
   position: relative;
-  height: 150vh;
+  height: 70rem;
   width: 100%;
   /* display: flex;
   flex-direction: column;
@@ -329,7 +329,7 @@ article:hover img {
   padding: 2%;
 }
 form .form-input {
-  width: 80vh;
+  width: 50rem;
   background: rgb(228, 226, 226);
   margin-bottom: 5%;
   border: 2px solid rgb(228, 226, 226);
@@ -350,8 +350,9 @@ form .form-input {
 }
 /* ------------------------------footer ----------------------------------------- */
 footer {
+  position: relative;
   width: 100%;
-  height: 60vh;
+  height: 25rem;
   bottom: 0;
   background-color: rgb(0, 0, 0);
   color: #fff;
@@ -405,9 +406,12 @@ footer .copyright {
     padding: 5%;
     flex-direction: column;
   }
-  footer {
-    height: 40vh;
+  form .form-input {
+    width: 30rem;
   }
+  /* footer {
+    height: 40vh;
+  } */
 }
 @media (max-width: 768px) {
   h2 {
