--- a/css/main.css
+++ b/css/main.css
@@ -409,9 +409,9 @@ footer .copyright {
   form .form-input {
     width: 30rem;
   }
-  /* footer {
-    height: 40vh;
-  } */
+  footer {
+    height: 20rem;
+  }
 }
 @media (max-width: 768px) {
   h2 {
@@ -450,12 +450,15 @@ footer .copyright {
   }
   footer {
     height: fit-content !important;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
   }
   footer .personal {
     flex-direction: column;
     align-items: center;
     gap: 20px;
+  }
+  footer .sec1{
+    width: 80%;
   }
   footer .sec2 {
     flex: none;
