--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,9 @@ nav li a {
 .side-logo:hover {
   scale: 1.2;
 }
+.side-menu a {
+  color: #000000;
+}
 /* --------------------------------about  me------------------------------*/
 .about-head {
   width: 100%;
@@ -232,53 +235,12 @@ nav li a {
   /* font-size: 35px; */
   margin-bottom: 10%;
 }
-.project-list {
-  display: flex;
-  gap: 2%;
-  /* padding: 5%; */
-  /* flex-direction: row; */
-  justify-content: space-around;
-  /* max-height: auto; */
-  /* margin-bottom: 100px; */
-}
 .proj-head {
   text-align: center;
   /* font-size: 30px; */
   font-weight: 800;
   letter-spacing: 2px;
   padding: 5% 10%;
-}
-article {
-  box-shadow: rgba(100, 100, 111, 0.2) 7px 7px 29px 0;
-  display: flex;
-  flex-direction: column;
-  /* flex-wrap: wrap; */
-  justify-content: center;
-  padding: 2vh;
-  transition: 0.3s ease-in-out;
-}
-
-article:hover img {
-  scale: 1.2;
-}
-.project {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.img-wrap {
-  height: 300px;
-  width: 100%;
-  overflow: hidden;
-}
-.proj-img {
-  width: 100%;
-  height: 100%;
-  border-radius: 8px;
-  padding-bottom: 5vh;
-  object-fit: cover;
-  transition: 0.5s;
-  overflow: hidden;
 }
 /* ---------------------------contact-form------------------------------ */
 .contact {
@@ -376,6 +338,15 @@ footer .f-logo-list {
   display: flex;
   gap: 10px;
 }
+.f-logo {
+  transition: 0.2s;
+}
+.f-logo:hover {
+  transform: scale(1.2);
+}
+footer a {
+  color: #fff;
+}
 footer .copyright {
   width: 100%;
   text-align: center;
@@ -400,11 +371,8 @@ footer .copyright {
     width: 250px;
     height: 350px;
   }
-  .project-list {
-    text-align: center;
-    display: flex;
-    padding: 5%;
-    flex-direction: column;
+  .proj-head {
+    margin: 6% auto;
   }
   form .form-input {
     width: 30rem;
@@ -427,9 +395,6 @@ footer .copyright {
   nav li {
     padding: 10px;
   }
-  .project-list {
-    flex-direction: column;
-  }
   .profile {
     align-items: center;
     padding: 0%;
@@ -440,7 +405,7 @@ footer .copyright {
     margin: 5% 0%;
   }
   .contact {
-    height: 100vh;
+    height: 70vh;
   }
   form .form-input {
     width: 100%;
@@ -457,7 +422,7 @@ footer .copyright {
     align-items: center;
     gap: 20px;
   }
-  footer .sec1{
+  footer .sec1 {
     width: 80%;
   }
   footer .sec2 {
@@ -468,5 +433,103 @@ footer .copyright {
   }
   footer h2 {
     text-align: center;
+  }
+}
+/* ======================projects NEWWWWWW==================== */
+.iframe-list {
+  height: fit-content;
+  padding: 50px 5%;
+  display: grid;
+  place-items: center;
+  gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  /* margin: 10% 0; */
+  /* display: flex;
+  justify-content: space-around; */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: 5vh;
+}
+.iframe-wrap {
+  width: 100%;
+  height: 55vh;
+  border-radius: 2%;
+  background: transparent;
+  /* padding: 2% 2%; */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  /* overflow: hidden; */
+}
+iframe {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  transition: 0.5s;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 2%;
+  transition: 0.4s ease-out;
+  z-index: 1;
+}
+/* .iframe-wrap:hover iframe {
+  scale: 1.1;
+} */
+
+.iframe-wrap:hover .layer {
+  top: 100%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.layer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 3%;
+  position: absolute;
+  transition: 0.4s;
+  left: 0;
+  height: fit-content;
+  width: 100%;
+  top: 20%;
+  background-color: #f1f1f1;
+  color: #000000;
+  border-radius: 0 0 20px 20px;
+}
+.layer h2 {
+  font-size: large;
+  font-weight: 800;
+  margin-bottom: 2%;
+}
+.layer p {
+  font-weight: 300;
+}
+@media (max-width: 1025px) {
+  .iframe-list {
+    /* align-items: center;
+    flex-direction: column; */
+    grid-template-columns: 1fr;
+    height: fit-content;
+    gap: 60px;
+  }
+  .iframe-wrap {
+    height: 60vh;
+    margin-bottom: 20%;
+  }
+  .layer {
+    position: unset;
+    z-index: 0;
+  }
+  iframe {
+    height: 100%;
+    position: unset;
+    z-index: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .iframe-list {
+    gap: 40px;
+  }
+  .iframe-wrap {
+    height: 50vh;
+    margin-bottom: 40%;
   }
 }
