--- a/css/main.css
+++ b/css/main.css
@@ -498,6 +498,10 @@ iframe {
   font-weight: 800;
   margin-bottom: 2%;
 }
+.layer a {
+  color: #000000;
+  text-decoration: none;
+}
 .layer p {
   font-weight: 300;
 }
