--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,27 @@ nav li a {
   /* text-align: center; */
   /* justify-content: center; */
 }
+.cv-btn {
+  box-shadow: rgba(100, 100, 111, 0.3) 7px 7px 35px 7px;
+  background-color: rgb(223, 223, 223);
+  text-align: center;
+  padding: 15px 20px;
+  margin-top: 25px;
+  border: none;
+  border-radius: 10%;
+  color: rgb(99, 99, 99);
+  font-size: 16px;
+  font-weight: 800;
+  transition: 0.3s;
+}
+.cv-btn:hover,
+.skill:hover,
+.submit-btn:hover {
+  scale: 1.1;
+  cursor: pointer;
+  background-color: #eaeaea;
+  color: black;
+}
 /* -------------------------------side social menu------------------------------*/
 .side-menu {
   position: absolute;
@@ -194,6 +215,7 @@ nav li a {
   margin-top: 8%;
   width: 500px;
   height: 500px;
+  mix-blend-mode: color-burn;
 }
 
 /* --------------------------SKILLS-------------------------------------- */
@@ -228,6 +250,7 @@ nav li a {
   color: rgb(146, 146, 146);
   /* font-size: 15px; */
   font-weight: 800;
+  transition: 0.3s;
 }
 
 /*--------------------------- projects -------------------------*/
@@ -311,6 +334,7 @@ form .form-input {
   font-weight: 800;
   letter-spacing: 1px;
   box-shadow: rgba(100, 100, 111, 0.2) 10px 7px 35px 0;
+  transition: 0.3s;
 }
 /* ------------------------------footer ----------------------------------------- */
 footer {
